apps/monitoring/grafana/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.lab.apj.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lab.apj.dev`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: lab-apj-dev-tls
